--- a/src/partials/file.html
+++ b/src/partials/file.html
@@ -16,6 +16,12 @@
               <div lazy-file file="file"></div>
             </div>
             
+            <div ng-switch-when="DocumentSidebar">
+              <h2 class="filename">{{file.title}} SIDE</h2>
+              <div lazy-file file="file"></div>
+            </div>
+
+            
             <div ng-switch-when="html">
               <div lazy-file file="file"></div>
             </div>
