--- a/src/partials/page.html
+++ b/src/partials/page.html
@@ -1,12 +1,72 @@
 
-<!-- {{files}} -->
-<!-- page {{ready}}, {{files.length}} -->
-<div ng-if="pageIsReady && files.length == 0"><strong>Ouch!</strong> There is no content here, the folder seems empty.</div>
-<div ng-if="!pageIsReady">
+<div ng-show="!ready">
   <div class="spinner">
     <div class="bounce1"></div>
     <div class="bounce2"></div>
     <div class="bounce3"></div>
   </div>
-  Please wait, <em>loading contents</em>...</div>
-<div class="file" ng-repeat="file in files" ng-include="'src/partials/file.html'"></div>
+  loading...
+</div>
+
+<!-- {{files}} -->
+<div ng-repeat="file in files">
+  <a id="file-{{file.id}}"></a>
+  <div ng-switch="file.type">
+    <div ng-switch-when="image">
+      <p></p>
+      <div class="row">
+        <img ng-src="{{file.src}}" class"full-width-image">
+      </div>
+    </div>
+  </div>
+</div>
+
+      <div class="row">
+        <div class="col-md-8">
+          <div ng-repeat="file in files">
+            <a id="file-{{file.id}}"></a>
+            <div ng-switch="file.type">
+              <div ng-switch-when="image">
+                <p></p>
+
+                <!--<div class="caption">{{file.title}}</div>-->
+              </div>
+              <div ng-switch-when="PDF">  
+                <!-- img ng-src="{{file.src}}" this is the file preview...-->
+                <a target="_blank" href="https://docs.google.com/file/d/0ByZTyEnzm9qqbWRTcE9sSmZkeTA">view file online</a>
+              </div>
+
+              <div ng-switch-when="Document">
+                <h2 class="filename">{{file.title}}</h2>
+                <div lazy-file file="file"></div>
+              </div>
+
+              <div ng-switch-when="Finding">
+                <h2 class="filename">{{file.title}} finding</h2>
+                <div lazy-file file="file"></div>
+              </div>
+
+
+
+              <div ng-switch-when="html">
+                <div lazy-file file="file"></div>
+              </div>
+
+              <div ng-switch-when="Spreadsheet">
+                <a target="_blank" href="https://docs.google.com/spreadsheets/d/{{file.id}}">view spreadsheet online<!-- img ng-src="{{file.src}}" --></a> 
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+
+          <div ng-repeat="file in files">
+            <div ng-switch="file.type">
+              <div ng-switch-when="Metadata">
+                <h2 class="filename">{{file.title}} metadata</h2>
+                <div lazy-file file="file"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
