--- a/src/partials/index.html
+++ b/src/partials/index.html
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-md-4">
+	<div class="col-md-4-sidebar">
 
 		<div ng-repeat="file in files">
 			<div ng-switch="file.type">
