--- a/src/partials/page.html
+++ b/src/partials/page.html
@@ -15,23 +15,21 @@
     <div ng-switch-when="image">
       <p></p>
       <div class="container-fluid">
-        <div class="row">
-          <img ng-src="{{file.src}}" class"full-width-image">
+        <div class="row full-width-image">
+          <img ng-src="{{file.src}}">
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-8 main-map">
       <div ng-repeat="file in files">
         <a id="file-{{file.id}}"></a>
         <div ng-switch="file.type">
           <div ng-switch-when="image">
-            <p></p>
-
             <!--<div class="caption">{{file.title}}</div>-->
           </div>
           <div ng-switch-when="PDF">  
@@ -39,9 +37,10 @@
             <a target="_blank" href="https://docs.google.com/file/d/0ByZTyEnzm9qqbWRTcE9sSmZkeTA">view file online</a>
           </div>
 
+          <div class="content-main-map">
           <div ng-switch-when="Document">
             <!--<h2 class="filename">{{file.title}}</h2>-->
-            <div lazy-file file="file"></div>
+            <div lazy-file file="file" class="document"></div>
           </div>
 
           <div ng-switch-when="Finding">
@@ -58,14 +57,15 @@
             <a target="_blank" href="https://docs.google.com/spreadsheets/d/{{file.id}}">view spreadsheet online<!-- img ng-src="{{file.src}}" --></a> 
           </div>
         </div>
+        </div>
       </div>
     </div>
-    <div class="col-md-4 sidebar-map">
+    <div class="col-md-4 sidebar-map"> 
       <div ng-repeat="file in files">
         <div ng-switch="file.type">
           <div ng-switch-when="Metadata">
              <!--<h2 class="filename">{{file.title}} metadata</h2>-->
-            <div lazy-file file="file"></div>
+            <div lazy-file file="file" class="content-sidebar-map"></div>
           </div>
         </div>
       </div>
